--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "author": "Aldo Verdugo",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/bigquery": "^6.2.0",
-    "@shopify/shopify-api": "^6.2.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -20,10 +18,8 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.10.4",
-    "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.30.0",
-    "shopify-api-node": "^3.12.3"
+    "node-fetch": "^3.3.1"
+    
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
