--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.10.4",
-    "node-fetch": "^3.3.1"
-    
+    "node-fetch": "^3.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
