--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.10.4",
     "node-fetch": "^3.3.1",
     "xlsx": "^0.18.5"
