--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aldo Verdugo",
   "license": "ISC",
   "dependencies": {
+    "@kafkajs/confluent-schema-registry": "^3.3.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "express": "^4.17.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "^2.2.4",
     "moment": "^2.29.4",
     "mongoose": "^6.10.4",
     "node-fetch": "^3.3.1",
