--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aldo Verdugo",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.352.0",
     "@kafkajs/confluent-schema-registry": "^3.3.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.0.1",
