--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,6 @@ jobs:
           key: ${{secrets.TEST_KEY}}
           script: |
             cd inventario_api
-            git pull origin master
+            git pull origin test
             pm2 restart api
             echo 'Deployment to digital ocean finished'
