--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.352.0",
     "@kafkajs/confluent-schema-registry": "^3.3.0",
+    "@prisma/client": "^5.3.1",
     "axios": "^1.3.5",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prisma": "^5.3.1"
   }
 }
