--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^6.10.4",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
     "xlsx": "^0.18.5"
   },
