--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.10.4",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
+    "pdfkit": "^0.14.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
