--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^6.10.4",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.1",
     "pdfkit": "^0.14.0",
     "xlsx": "^0.18.5"
