get new object for changes on logs

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json-bigint": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "kafkajs": "^2.2.4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^6.10.4",
